omni/tests/goldens/types/unknown_type_24.omni
let value24:Mystery24 = 1
